# AnyBridge

./: .env.example  .gitattributes  .gitignore  07-ACP-Agent-Architecture-and-Unlock-Plan.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  SECURITY.md  SUPPORT.md  _codex_mon.mjs  _gs.txt  findings.md  logo-design-options-gsap-dom.html  logo-design-options-motion.html  logo-design-options-share-motion.html  logo-design-options-share-part-colors.html  logo-design-options-share-path-colors.html  logo-design-options-share-v10-colors.html  logo-design-options-svg.html  logo-design-options.html  package-lock.json  package.json  progress.md  task_plan.md  tauri-sign.key.pub  待办.md  待调研.md  问题追踪-IssueTracking.md
.codex-run/: webview-history-copy.sqlite
.github/: CODEOWNERS  dependabot.yml
certs/: README.md
docs/: 01-加密保护指导-EncryptionProtectionGuide.md  03-打包与更新发布指南-PackagingAndUpdateGuide.md  04-Devin-Account-Model-Refresh-Debugging.md  05-项目全面审查报告-ProjectAuditReport.md  06-Codex-Platform-Config-Research.md  07-AnyRouter-API逆向分析-AnyRouterAPIReverseEngineering.md  ARCHITECTURE.md  AnyRouter-Claude-字段精简测试报告.md  AnyRouter-claude.html  AnyRouter-字段精简测试报告.md  DEVELOPMENT.md  RELEASE.md  index.html
scripts/: README.md  _apply-regression-restore.mjs  _audit-baseline-diff.mjs  _audit-button-colors-deep.mjs  _audit-button-colors.mjs  _audit-features-detail.mjs  _audit-precise-loss.mjs  _audit-regressions-v2.mjs  _audit-reveal-and-buttons.mjs  _audit-stash-and-gap.mjs  _check-restore.mjs  _commit-backup.mjs  _find-session-traces.mjs  _finish-regression-restore.mjs  _review-snapshot.mjs  _snip-platforms.txt  _tmp-audit-regressions.mjs  _tmp-extract-tab.mjs  _tmp-find-stats-tabs.mjs  _tmp-inventory.mjs  _tmp-nav-detail.mjs  _tmp-nav-stats.mjs  _tmp-proxy-hist.mjs  _tmp-proxy-tabs.html  _verify-build-restore.mjs  add-opencode-codex-config.cjs  build-ui.mjs  calc-field-sizes.cjs  check-cache-log.cjs  check-cache.cjs  check-cache2.cjs  check-cursor-proxy.mjs  check-devin-auth.js  check-mitm-logs.cjs  check-opencode.cjs  check-providers.cjs  check-token-truncation.cjs  check-ui.mjs  check_recent_image.cjs  codex-template.json  (+51 more)
sidecar/: config-cache.js  config-cache.test.js  connect.js  cursor-proxy.js  hybrid-server.js  inference-proxy.js  (+22 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.nsis-only.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/resources/: byok-cards.js  model-context-presets.json
src-tauri/resources/codex/: codex_client_models.json
src-tauri/resources/sidecar/: windsurf-catalog.json
src-tauri/src/: antidebug.rs  integrity.rs  lib.rs  main.rs
src-tauri/src/commands/: cert_install.rs  codex_desktop.rs  codex_session_visibility.rs  config.rs  cursor_auth.rs  eval.rs  extensions.rs  ide_config.rs  ide_models.rs  ide_models_fix.rs  kite_plugin.rs  mod.rs  model_map.rs  platforms.rs  provider_import.rs  proxy.rs  proxy_routes.rs  system.rs  update.rs  windsurf_catalog.rs  windsurf_config.rs  windsurf_models.rs  workbench_inject.rs
src-tauri/windows/nsis/: installer-hooks.nsh
(+153 files in other folders)
