[package]
name = "ide-byok"
version = "1.1.4"
description = "IDE BYOK desktop app"
authors = ["soulvon"]
edition = "2021"

[lib]
name = "ide_byok_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
flate2 = "1"
dirs = "5"
rcgen = "0.13"
json5 = "0.4"
tauri-plugin-updater = "2"
regex = "1"
