[package]
name = "anybridge"
version = "0.2.5"
description = "AnyBridge desktop client"
authors = ["soulvon"]
edition = "2021"

[lib]
name = "anybridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
flate2 = "1"
dirs = "6"
rcgen = "0.13"
json5 = "0.4"
toml_edit = "0.22"
tauri-plugin-updater = "2"
chrono = "0.4"
regex = "1"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
snap = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_Foundation",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
